--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     },
     "dependencies": {
         "bootstrap": "^5.3.3",
-        "bootstrap-icons": "^1.11.3"
+        "bootstrap-icons": "^1.11.3",
+        "ckeditor5": "^43.3.1",
+        "ckeditor5-premium-features": "^43.3.1",
+        "tinymce": "^7.5.1"
     }
 }
