--- a/draft.yaml
+++ b/draft.yaml
@@ -77,5 +77,17 @@ models:
     price: bigInteger
     subtotal: integer
 
+  SizeChart:
+    type: string nullable
+    size: string nullable
+    pinggang: string nullable
+    pinggul: string nullable
+    paha: string nullable
+    kaki: string nullable
+    panjang: string nullable
+    lebar: string nullable
+    lengan: string nullable
+
+
 controllers:
 # ...
